[package]
name = "flashback"
version = "0.0.1"
authors = ["Eduard-Mihai Burtescu <edy.burt@gmail.com>"]
edition = "2018"
repository = "https://github.com/lykenware/flashback"
license = "MIT/Apache-2.0"
keywords = ["Flash", "SWF"]
readme = "README.md"
description = "Adobe Flash / SWF preservation tools."

[dependencies]
avm1-parser = "0.2.0"
avm1-tree = "0.2.1"
swf-parser = "0.3.1"
swf-tree = "0.4.2"
svg = "0.5.12"
image = "0.20.1"
inflate = "0.4.4"
base64 = "0.10.0"

[lib]
doctest = false
test = false

[workspace]
members = [
    "web",
]
